fix: Fix text overflowing issues all over the app (#107)
* fixed overflowing issue with playlist context menu

* fixed overflow issues with collection item

* fixed text overflowing issues with playlist, artist and album pages

* fixed text overflowing issues with media track

* added support for marquee text in media player

* formatting fixes

--- a/src/components/media-track-info/media-track-info.component.css
+++ b/src/components/media-track-info/media-track-info.component.css
@@ -2,10 +2,10 @@
   display: flex;
   flex-flow: column;
   align-items: flex-start;
-  white-space: nowrap;
-  overflow: hidden;
+  overflow: visible;
   padding: var(--selectable-focus-ring-size); /* this is to not clip focus ring */
   gap: 5px;
+  min-width: 0;
 }
 
 .media-track-info-title {
@@ -16,6 +16,12 @@
 .media-track-info-subtitle {
   font-size: 13px;
   color: var(--text-dark-color);
+}
+
+.media-track-info-title,
+.media-track-info-subtitle {
+  max-width: 100%;
+  overflow: hidden;
 }
 
 .media-track-album-link,
